# cooee

./: .gitignore  Cargo.toml  Makefile  README.md  postgres-compose.yml
.claude/: settings.local.json
.superpowers/brainstorm/3092148-1774138595/: .server-stopped  .server.pid  notification-position.html  notification-style.html
data/: cooee.service
docs/superpowers/plans/: 2026-03-22-cooee-implementation.md  2026-03-22-tts-smart-speak.md  2026-03-23-history.md  2026-03-23-polish.md
docs/superpowers/specs/: 2026-03-22-cooee-design.md  2026-03-22-tts-smart-speak-design.md  2026-03-23-history-design.md  2026-03-23-polish-design.md
src/: client.rs  config.rs  lib.rs  main.rs  notification.rs
src/daemon/: action_picker.rs  dbus.rs  hyprland.rs  mod.rs  socket.rs  sound.rs  state.rs  tts.rs  ui.rs
tests/: integration_test.rs
